yaml-templates/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${namespace}
  name: kibana-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${acm_arn}
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
spec:
  ingressClassName: alb
  rules:
    - host: "kibana.rameshcreations.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-kb-http
              port:
                number: 5601
